--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navigation">
         <a href="#">Home</a>
             <a href="figma2.html">Menu</a>
-            <a href="index.html">Contact</a>
+            <a href="lugun.html">Contact</a>
             <a href="gallery.html">Gallery</a>
             </nav>
     </header>
