--- a/figma2.html
+++ b/figma2.html
@@ -11,9 +11,9 @@
     <header>
       <h2 class="logo">Catering Mama Daffa</h2>
       <nav class="navigation">
-        <a href="figma1.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="#">Menu</a>
-        <a href="index.html">Contact</a>
+        <a href="lugun.html">Contact</a>
         <a href="gallery.html">Gallery</a>
       </nav>
       </header>
