--- a/figmacontact.html
+++ b/figmacontact.html
@@ -10,7 +10,7 @@
     <header>
       <h2 class="logo">Catering Mama Daffa</h2>
       <nav class="navigation">
-        <a href="figma1.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="figma2.html">Menu</a>
         <a href="#">Contact</a>
         <a href="gallery.html">Gallery</a>
