--- a/gallery.html
+++ b/gallery.html
@@ -13,9 +13,9 @@
     <header>
         <h2 class="logo">Catering Mama Daffa</h2>
         <nav class="navigation">
-        <a href="figma1.html">Home</a>
+        <a href="index.html">Home</a>
             <a href="figma2.html">Menu</a>
-            <a href="index.html">Contact</a>
+            <a href="lugun.html">Contact</a>
             <a href="#">Gallery</a>
             </nav>
     </header>
