--- a/figma2.html
+++ b/figma2.html
@@ -40,7 +40,7 @@
                 seperti tempe oreg, ayam, mie dan perkedel. isi/lawuk dari tumpeng bisa di custom sesuai keinginan pelanggan
             </p>
           </div>
-          <a href="index.html" class="button">pesan</a>
+          <a href="lugun.html" class="button">pesan</a>
         </div>
         <div class="box">
           <div class="box-top">
@@ -50,7 +50,7 @@
             </div>
             <p class="description">Nasi berkat buatan mama daffa, bisa di custom sesuai keinginan pelanggan</p>
           </div>
-          <a href="index.html" class="button">pesan</a>
+          <a href="lugun.html" class="button">pesan</a>
         </div>
         <div class="box">
           <div class="box-top">
@@ -60,7 +60,7 @@
             </div>
             <p class="description">Aneka jajanan dan kue-kue tradisional seperti klepon,risol,lapis.onde-onde dll</p>
           </div>
-          <a href="index.html" class="button">pesan</a>
+          <a href="lugun.html" class="button">pesan</a>
         </div>
         <div class="box">
           <div class="box-top">
@@ -70,7 +70,7 @@
             </div>
             <p class="description">Catering mama daffa menyediakan makanan khas pekalongan loh..., yaitu nasi megono, bisa di custom sesuai keinginan pelanggan. </p>
           </div>
-          <a href="index.html" class="button">pesan</a>
+          <a href="lugun.html" class="button">pesan</a>
         </div>
       </div>
 </body>
