--- a/trm.html
+++ b/trm.html
@@ -51,7 +51,7 @@
     <div class="container">
         <h1>Terima Kasih!</h1>
         <p>Pesanan Anda telah berhasil diproses. Kami akan segera menghubungi Anda untuk konfirmasi lebih lanjut.</p>
-        <a href="figma1.html" class="button">Kembali ke Beranda</a>
+        <a href="index.html" class="button">Kembali ke Beranda</a>
     </div>
 </body>
 </html>
